[package]
name = "gossiprpc"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.54", features = [
    "tokio",
    "gossipsub",
    "tcp",
    "noise",
    "yamux",
    "macros"
]}
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4"] }
futures = "0.3"